--- a/nextflow.config
+++ b/nextflow.config
@@ -1,7 +1,7 @@
 manifest {
     author = 'Keiler Collier'
     description = 'A NextFlow-enabled pipeline intended to streamline SNP discovery from .vcf files'
-    mainScript = 'OikosFilt.nf'
+    mainScript = 'main.nf'
     name = 'OikosFilt'
     nextflowVersion = '>=25.0.0' //this is the version of NextFlow I initially developed the pipeline on. It might work for others.
     version = '1.0.0'
