--- a/nextflow.config
+++ b/nextflow.config
@@ -12,9 +12,10 @@ manifest {
     totalMemoryGB = Runtime.runtime.maxMemory() / 1024 / 1024 / 1024 
     memoryToUseGB = (totalMemoryGB * 0.8).round(2)
 
-/*
- * default params
- */
+// Params for output
+workflow.output.mode = 'copy'
+
+
 
  params {
 // Params for upper-resource limits:
