Broken commit of depth filter. 95% percile partially implemented, but bcftools is being strange.

--- a/nextflow.config
+++ b/nextflow.config
@@ -27,6 +27,8 @@ workflow.output.mode = 'copy'
     help = false
     vcf = null
     bi_snps = true
+    dp_95ci = true
+    min_dp = null
     threads = max_cpus / 2
     prefix = 'out'
 }
