Working quality filters. Defaults are set to 20, which is reasonable for most scenarios.

--- a/nextflow.config
+++ b/nextflow.config
@@ -27,8 +27,10 @@ workflow.output.mode = 'copy'
     help = false
     vcf = null
     bi_snps = true
-    dp_95ci = true
-    min_dp = null
+    dp_95ile = true
+    min_dp = 10
+    min_qual = 20
+    min_gq = 20
     threads = max_cpus / 2
     prefix = 'out'
 }
