--- a/nextflow.config
+++ b/nextflow.config
@@ -31,6 +31,8 @@ workflow.output.mode = 'copy'
     min_dp = 10
     min_qual = 20
     min_gq = 20
+    min_maf = 3
+    max_fmissing = 0.1
     threads = max_cpus / 2
     prefix = 'out'
 }
