Nextflow cleanup behavior enabled. We also change the default workflow mode to copy.

--- a/nextflow.config
+++ b/nextflow.config
@@ -7,23 +7,19 @@ manifest {
     version = '1.0.0'
 }
 
-// Params for upper-resource limits:
+cleanup = true
+
+workflow {
+    workflow.output.mode = 'copy'
+}
+
+params {
+    // Params for upper-resource limits:
     max_cpus = Runtime.runtime.availableProcessors()
     totalMemoryGB = Runtime.runtime.maxMemory() / 1024 / 1024 / 1024 
     memoryToUseGB = (totalMemoryGB * 0.8).round(2)
 
-// Params for output
-workflow.output.mode = 'copy'
-
-
-
- params {
-// Params for upper-resource limits:
-    max_cpus = Runtime.runtime.availableProcessors()
-    totalMemoryGB = Runtime.runtime.maxMemory() / 1024 / 1024 / 1024 
-    memoryToUseGB = (totalMemoryGB * 0.8).round(2)
-
-//input params
+    //User-facing params
     help = false
     vcf = null
     prefix = 'out'
@@ -35,6 +31,11 @@ workflow.output.mode = 'copy'
     min_gq = 20
     min_maf = 3
     max_fmissing = 0.1
+
+    //non-user facing parameters:
+    outdir = params.prefix
+    workflow.output.mode = 'copy'
+    cleanup = true
 }
 
 process {
@@ -42,10 +43,8 @@ process {
 }
 
 
-/*
- * defines execution profiles for different environments
- */
- profiles {
+//defines execution profiles for different environments
+profiles {
     standard {
         conda.enabled = true
         conda.channels = ['bioconda', 'conda-forge']
