I added a DAG to the README, edited the main script so that the help function stopped automatically activating, took the defaults out of the nextflow config and added them to the python frontend (OikosFilt).

--- a/nextflow.config
+++ b/nextflow.config
@@ -22,15 +22,15 @@ params {
     //User-facing params
     help = false
     vcf = null
-    prefix = 'out'
+    prefix = null
     threads = max_cpus / 2
-    bi_snps = true
-    dp_95ile = true
-    min_dp = 10
-    min_qual = 20
-    min_gq = 20
-    min_maf = 0.03
-    max_fmissing = 0.1
+    bi_snps = null
+    dp_95ile = null
+    min_dp = null
+    min_qual = null
+    min_gq = null
+    min_maf = null
+    max_fmissing = null
 
     //non-user facing parameters:
     outdir = params.prefix
