We now have a mode designed for work on the chpc. It accesses bcftools (and other dependencies) from the user's path, rather than a conda environment.

--- a/nextflow.config
+++ b/nextflow.config
@@ -50,10 +50,8 @@ profiles {
         conda.channels = ['bioconda', 'conda-forge']
         report.overwrite = true
     }
-    mamba {
-        conda.enabled = true
-        conda.useMicromamba = true
-        conda.channels = ['conda-forge,bioconda']
+    chpc {
+        conda.enabled = false
+        process.beforeScript = 'export PATH="/usr/local/bin:$PATH"'
     }
-
 }
