Removed duplicated+invalidly-formatted parameters in the config file.

--- a/nextflow.config
+++ b/nextflow.config
@@ -10,7 +10,7 @@ manifest {
 cleanup = true
 
 workflow {
-    workflow.output.mode = 'copy'
+    output.mode = 'copy'
 }
 
 params {
@@ -34,8 +34,6 @@ params {
 
     //non-user facing parameters:
     outdir = params.prefix
-    workflow.output.mode = 'copy'
-    cleanup = true
 }
 
 process {
@@ -47,11 +45,18 @@ process {
 profiles {
     standard {
         conda.enabled = true
+        conda.cacheDir = "${launchDir}/conda_cache"
         conda.channels = ['bioconda', 'conda-forge']
         report.overwrite = true
+        process {
+            conda = 'bcftools=1.20.0'
+        }
     }
     chpc {
         conda.enabled = false
-        process.beforeScript = 'export PATH="/usr/local/bin:$PATH"'
+        process {
+            conda = null
+            beforeScript = 'export PATH="/usr/local/bin:$PATH"'
+        }
     }
 }
